Wed Apr 26 14:17:14 2000  Brian Gough  <bjg@network-theory.co.uk>

	* prop_source.c (FUNCTION): added const to argument of
 	gsl_vector_isnull

	* init_source.c (FUNCTION): added gsl_vector_set_basis(v,i) to set
 	v to basis vector v = e_i  (0,0,...,1,...,0)

Tue Apr 25 11:31:38 2000  Brian Gough  <bjg@network-theory.co.uk>

	* test_source.c (FUNCTION): modified the tests so that they work
 	more cleanly with checkergcc when using long doubles. The trick
 	seems to be to avoid having any long doubles on the stack.

Sat Apr 22 15:09:44 2000  Brian Gough  <bjg@network-theory.co.uk>

	* init_source.c (FUNCTION): separated subvector functions into
 	gsl_vector_subvector and gsl_vector_subvector_with_stride

Sat Mar 25 20:23:58 2000  Brian Gough  <bjg@network-theory.co.uk>

	* swap_source.c (FUNCTION): renames gsl_vector_swap to
 	gsl_vector_swap_elements

Tue Mar 21 21:15:10 2000  Brian Gough  <bjg@network-theory.co.uk>

	* vector_source.c (FUNCTION): added set_zero function

Thu Feb 24 16:19:55 2000  Brian Gough  <bjg@network-theory.co.uk>

	* added missing prototypes for gsl_vector_complex_..._reverse

Fri Feb 18 20:48:32 2000  Brian Gough  <bjg@network-theory.co.uk>

	* swap_source.c (FUNCTION): added gsl_vector_reverse function for
 	flipping the order of a vector

	* copy_source.c: renamed gsl_vector_copy to gsl_vector_cpy
	since it acts like memcpy (dest, src) not 'cp(copy) from to'

Thu Dec  2 20:39:02 1999  Brian Gough  <bjg@network-theory.co.uk>

	* init_source.c: fixed bug, block element needs to be null in
 	gsl_vector_alloc_from_vector to maintain correct ownership,
	added gsl_vector_view_from_vector (Thanks to Fabrice Rossi)

Tue Oct 19 14:13:14 1999  Brian Gough  <bjg@network-theory.co.uk>

	* added gsl_vector_swap function to exchange elements

Fri Oct  1 15:47:45 1999  Brian Gough  <bjg@network-theory.co.uk>

	* removed support for gsl_vector_ptr. Use set/get instead.

	* now uses separate block directory for memory management
