@@ -97,6 +97,13 @@ size_t gsl_vector_short_max_index (const gsl_vector_short * v);
 size_t gsl_vector_short_min_index (const gsl_vector_short * v);
 void gsl_vector_short_minmax_index (const gsl_vector_short * v, size_t * imin, size_t * imax);
 
+int gsl_vector_short_add (gsl_vector_short * a, const gsl_vector_short * b);
+int gsl_vector_short_sub (gsl_vector_short * a, const gsl_vector_short * b);
+int gsl_vector_short_mul_elements (gsl_vector_short * a, const gsl_vector_short * b);
+int gsl_vector_short_div_elements (gsl_vector_short * a, const gsl_vector_short * b);
+int gsl_vector_short_scale (gsl_vector_short * a, const double x);
+int gsl_vector_short_add_constant (gsl_vector_short * a, const double x);
+
 
 int gsl_vector_short_isnull (const gsl_vector_short * v);
 
